--- a/bogomips.1
+++ b/bogomips.1
@@ -36,4 +36,5 @@ physics.
 .B Bogomips
 was written by Jeff Tranter (Jeff_Tranter@Mitel.COM) based on code
 from the Linux kernel, by Linus Torvalds. Additional changes suggested
-by Thomas McWilliams and Paul Healy.
+by Thomas McWilliams and Paul Healy. Vitaly Chernooky returned life to
+this famous SW on modern HW and in modern env.
