--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Changes from 1.3 to 1.3.1:
+- made useful on modern HW and in modern env.
+
 Changes from 1.1 to 1.2:
 - now supports 3 versions:
   - original ("classic") Linux bogomips program
